# but_courses

./: .gitignore  pyproject.toml  retours_2025.md  transform.nu
assessments/: pyproject.toml
assessments/resources/: answers.json  questions_answer_correction_prompt.txt  questions_system_prompt.txt  summary_system_prompt.txt  terraform_system_prompt.txt  terraform_user_prompt.txt
assessments/src/assessments/: __main__.py  app.py  files.py  models.py  processing.py  rating.py
assessments/src/assessments/tui/: app.py
assessments/tests/: test_files.py
database/: main.py  pyproject.toml
doc/: retours_2025.md
doc/cm/: aide_gemini.md  main.typ  templates.typ
doc/cm/parts/: 1_fondamentals.typ  2_as-a-Service.typ
doc/tp/: main.typ  utils.typ
doc/tp/parts/: 1_introduction.typ  2_configuration.typ  3_deployment.typ  4_database.typ  5_llm.typ  6_bonus.typ
project/: Cargo.toml  Dockerfile
project/src/: main.rs  mcp.rs
terraform/src/modules/students/: inputs.tf  main.tf  outputs.tf
terraform/src/stack/: .terraform.lock.hcl  _inputs.tf  _main.tf  _outputs.tf  common.tf  containers.tf  main.tf  users.tf
terraform/src/stack/students/: 2025.csv  2025_s5a.csv  2025_s5b.csv  2025_s5c.csv  test.csv  transform.nu
terraform/src/stack/students/raw/: 2025.csv  2025_s5a.csv  2025_s5b.csv  2025_s5c.csv
terraform/student_src/stack/: .terraform.lock.hcl  _external.tf  _inputs.tf  _main.tf  _outputs.tf  containers.tf  database.tf  secrets.tf
tp_sources/: ANSWERS.md
tp_sources/project/: Cargo.toml
tp_sources/terraform/src/stack/: _main.tf  terraform.auto.tfvars
utils/: remove_bad_containers.nu
