[project]
name = "assessments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.0",
    "langchain-google-genai>=4.2.0",
    "langchain-mistralai>=1.1.1",
    "langsmith>=0.4.59",
    "polars>=1.36.1",
    "py7zr>=1.1.0",
    "pydantic>=2.12.5",
    "textual>=7.5.0",
    "typer>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
test = [
    "pytest>=9.0.2",
]

[project.scripts]
assessments = "assessments.app:app"
