[package]
name = "but_mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.8.5", features = ["transport-sse-server", "schemars", "server"] }
tokio = { version = "1.48.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "io-std",
    "signal",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = [
    "env-filter",
    "std",
    "fmt",
] }
tower-http = { version = "0.6", features = ["cors"] }
axum = { version = "0.8.7", features = ["macros"] }
tokio-util = "0.7.17"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio"] }
